# live-split-hotkeys

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: key.rs  main.rs
