[package]
name = "live-split-hotkeys"
version = "0.1.0"
authors = ["descawed <live-split-hotkeys@descawed.com>"]
edition = "2021"
description = "Enables LiveSplit's global hotkeys on Linux by listening for hotkeys and forwarding them to the LiveSplit window"
readme = "README.md"
repository = "https://github.com/descawed/live-split-hotkeys/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.*"
async-std = { version = "1.12.*", features = ["attributes"] }
clap = { version = "4.1.*", features = ["derive"] }
enum-map = "2.5.*"
futures = "0.3.*"
input_event_codes_hashmap = "0.1.*"
libc = "0.2.*"
quick-xml = "0.28.*"